Revoked and removed API Key

--- a/Chatbot/JupitarNotebook/langchain.ipynb
+++ b/Chatbot/JupitarNotebook/langchain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,26 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ[\"OPEN_API_KEY\"] = \"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\""
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm=OpenAI(openai_api_key=os.environ[\"OPEN_API_KEY\"], temperature=0.6)"
+    "llm=OpenAI(openai_api_key=os.getenv('OPEN_API_KEY'), temperature=0.6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,13 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\LangChain\\Langchain_first_learning\\Chatbot\\venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "c:\\LangChain\\Langchain_first_learning\\Chatbot\\venv\\lib\\site-packages\\huggingface_hub\\utils\\_deprecation.py:131: FutureWarning: 'InferenceApi' (from 'huggingface_hub.inference_api') is deprecated and will be removed from version '1.0'. `InferenceApi` client is deprecated in favor of the more feature-complete `InferenceClient`. Check out this guide to learn how to convert your script to use it: https://huggingface.co/docs/huggingface_hub/guides/inference#legacy-inferenceapi-client.\n",
       "  warnings.warn(warning_message, FutureWarning)\n"
      ]
@@ -78,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -105,39 +108,37 @@
      "text": [
       "\n",
       "\n",
-      "Oh Calgary, city of the west\n",
-      "Where mountains rise and rivers crest\n",
-      "A land of beauty, a land of pride\n",
-      "Where cowboys roam and oil rigs reside\n",
+      "Calgary, city of the west\n",
+      "A land of beauty, rugged and blessed\n",
+      "Where mountains stand tall against the sky\n",
+      "And the prairies stretch out, wide and dry\n",
       "\n",
-      "From the Stampede to the Calgary Tower\n",
-      "You hold a charm that cannot be sour\n",
-      "Your skyline glitters in the sun\n",
-      "A sight that cannot be outdone\n",
+      "In summer, the sun shines bright and hot\n",
+      "As we gather for the Stampede, a cowboy's lot\n",
+      "With boots and hats and a hearty cheer\n",
+      "We celebrate our heritage, year after year\n",
       "\n",
-      "The Bow and Elbow, your mighty rivers\n",
-      "Flowing through the city with grace and shivers\n",
-      "A place to raft, a place to fish\n",
-      "A place to find a moment of bliss\n",
+      "But when winter comes, the city transforms\n",
+      "As snow blankets the streets in its icy storms\n",
+      "The chill in the air, a reminder of home\n",
+      "As we skate on the rink or ski on the slopes\n",
       "\n",
-      "In winter, you are a winter wonderland\n",
-      "With snow-capped peaks and skating rinks at hand\n",
-      "The Calgary Flames, they light the ice\n",
-      "A symbol of strength, a symbol of sacrifice\n",
+      "The Bow River flows through the heart of the city\n",
+      "A peaceful oasis, so calm and pretty\n",
+      "Where we walk and bike and breathe in the air\n",
+      "And forget for a moment, the hustle and care\n",
       "\n",
-      "But it's not just the landscape that makes you great\n",
-      "It's the people, the spirit, the welcoming trait\n",
-      "From every corner of the world they come\n",
-      "To call you home, their chosen one\n",
+      "Calgary, a melting pot of cultures and dreams\n",
+      "Where diversity thrives and acceptance gleams\n",
+      "From Chinatown to Little Italy, we come together\n",
+      "To celebrate our differences and embrace each other\n",
       "\n",
-      "Your culture, a blend of old and new\n",
-      "From the Glenbow Museum to the Calgary Zoo\n",
-      "The Calgary Stampede, a true cowboy show\n",
-      "Bringing the city together, a sight to behold\n",
+      "And oh, the food! A feast for the senses\n",
+      "From poutine to sushi, our taste buds go on adventures\n",
+      "And the craft beer scene, a true delight\n",
+      "As we raise a glass and toast to the night\n",
       "\n",
-      "Oh Calgary, you are a shining star\n",
-      "A city that's made its mark, near and far\n",
-      "With your\n"
+      "But amidst all the hustle,\n"
      ]
     }
    ],
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +164,7 @@
        "'Tell me the capital of Japan'"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,16 +180,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\LangChain\\Langchain_first_learning\\Chatbot\\venv\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:117: LangChainDeprecationWarning: The function `run` was deprecated in LangChain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'\\n\\nTokyo'"
+       "'\\n\\nThe capital of Japan is Tokyo.'"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,16 +232,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\", Japan\\n\\n1. Shinjuku: This bustling district is known for its vibrant nightlife, shopping, and entertainment options.\\n\\n2. Sensoji Temple: Located in the Asakusa neighborhood, this ancient Buddhist temple is a must-visit for its beautiful architecture and cultural significance.\\n\\n3. Akihabara: Known as the center of Japan's otaku culture, Akihabara is a haven for anime and manga lovers, with countless shops, cafes, and arcades dedicated to these interests.\\n\\n4. Tsukiji Fish Market: This famous fish market is a must-visit for foodies, where you can witness the bustling auction of fresh seafood and try some of the best sushi in the world.\\n\\n5. Tokyo Disney Resort: A popular destination for families and Disney fans, this resort features two theme parks, Tokyo Disneyland and Tokyo DisneySea, as well as shopping and dining options.\\n\\n6. Meiji Jingu Shrine: Located in the heart of Tokyo, this Shinto shrine is a peaceful escape from the city's hustle and bustle, surrounded by a lush forest.\\n\\n7. Shibuya Crossing: One of the busiest intersections in the world, Shibuya Crossing is a must-see for its iconic pedestrian scramble and vibrant city atmosphere.\\n\\n8. Tokyo Sky\""
+       "'\\n1. Shibuya Crossing - one of the busiest and most iconic intersections in the world\\n2. Tokyo Skytree - the tallest tower in Japan with observation decks offering stunning views of the city\\n3. Sensō-ji Temple - the oldest temple in Tokyo, with a bustling market outside\\n4. Akihabara - known as the \"Electric Town,\" this area is a hub for anime, manga, and electronics\\n5. Meiji Shrine - a peaceful oasis in the middle of the city, dedicated to Emperor Meiji and Empress Shōken\\n6. Tsukiji Fish Market - the largest fish market in the world, with a famous tuna auction\\n7. Odaiba - a man-made island with futuristic architecture, shopping malls, and a giant Gundam statue\\n8. Ueno Park - a large park with museums, temples, and a zoo\\n9. Harajuku - a colorful and eccentric neighborhood known for its fashion and street food\\n10. Mount Fuji - a must-see natural wonder, located just outside of Tokyo.'"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,18 +299,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\LangChain\\Langchain_first_learning\\Chatbot\\venv\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:117: LangChainDeprecationWarning: The function `__call__` was deprecated in LangChain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "{'country': 'Japan',\n",
-       " 'capital': '\\n\\nThe capital of Japan is Tokyo.',\n",
-       " 'places': ' Here are some amazing places to visit in Tokyo:\\n\\n1. Tokyo Skytree - This iconic tower is the tallest structure in Japan and offers breathtaking views of the city.\\n\\n2. Shibuya Crossing - Known as the busiest intersection in the world, this area is a must-visit for its vibrant atmosphere and neon lights.\\n\\n3. Sensoji Temple - This ancient Buddhist temple is a popular tourist spot and a great place to experience Japanese culture and tradition.\\n\\n4. Akihabara - For all the anime and manga lovers, this district is a paradise with its numerous shops, arcades, and cafes dedicated to Japanese pop culture.\\n\\n5. Meiji Jingu Shrine - Located in the heart of the city, this Shinto shrine is a peaceful oasis in the bustling city and a popular spot for traditional weddings.\\n\\n6. Tsukiji Fish Market - This world-famous fish market is a must-visit for its bustling atmosphere and delicious sushi.\\n\\n7. Odaiba - This man-made island offers a variety of attractions such as shopping malls, theme parks, and a replica of the Statue of Liberty.\\n\\n8. Ueno Park - This spacious park is a popular spot for cherry blossom viewing in the spring and also houses several museums and a zoo.\\n\\n9. Tokyo Disneyland and Disney'}"
+       " 'capital': '\\n\\nThe capital of Japan is Tokyo. ',\n",
+       " 'places': \"\\n\\n1. Shibuya Crossing - One of the busiest and most iconic intersections in the world, featuring giant screens and neon lights.\\n\\n2. Tokyo Skytree - The tallest tower in the world, offering breathtaking views of the city from its observation deck.\\n\\n3. Meiji Shrine - A peaceful and serene Shinto shrine located in the heart of Tokyo's bustling Shibuya district.\\n\\n4. Tsukiji Fish Market - The largest wholesale seafood market in the world, where you can watch the famous tuna auctions and try fresh sushi.\\n\\n5. Akihabara - The center of Japan's anime, manga, and gaming culture, with countless shops and arcades to explore.\\n\\n6. Asakusa - A traditional district with a beautiful temple, Nakamise shopping street, and the chance to ride a rickshaw through the streets.\\n\\n7. Harajuku - The fashion capital of Tokyo, known for its quirky street style and trendy shops.\\n\\n8. Tokyo Disneyland and DisneySea - Two of the most popular theme parks in Japan, offering a magical experience for all ages.\\n\\n9. Ueno Park - A large park with several museums, temples, and a zoo, perfect for a relaxing day out.\\n\\n10. Odaiba - A man-made island with futuristic architecture, shopping\"}"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,16 +363,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x00000278E8737C40>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x00000278E8738CD0>, temperature=0.6, openai_api_key='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', openai_proxy='')"
+       "ChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x0000020BD4340D90>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x0000020BD4215D30>, temperature=0.6, openai_api_key='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', openai_proxy='')"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,16 +383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='1. \"Why did the AI go to therapy? It had an existential bug that needed debugging!\"\\n\\n2. \"Why did the AI cross the road? To optimize its algorithm for finding the best chicken jokes!\"\\n\\n3. \"I asked Siri if she believes in love at first sight. She said, \\'I\\'m sorry, I can\\'t answer that. But I can help you find the nearest optometrist!\\'\"\\n\\n4. \"Why did the AI get a job at the bakery? It kneaded a change of pace!\"\\n\\n5. \"Why did the AI start a band? It wanted to be the master of byte-sized music!\"\\n\\n6. \"I asked Alexa to tell me a joke, and she said, \\'Why don\\'t scientists trust atoms? Because they make up everything!\\' I guess even AI can appreciate a good pun!\"\\n\\n7. \"Why did the AI become a stand-up comedian? It realized that laughter is the best algorithm for connecting with humans!\"\\n\\n8. \"I told my AI assistant that I wanted to lose weight, and it replied, \\'Sure! Just delete all the cookies from your browser!\\'\"\\n\\n9. \"Why did the AI take up gardening? It wanted to cultivate its green thumb-drive!\"\\n\\n10. \"I asked my AI if it could help me find my car keys, and it said, \\'I\\'m sorry, I\\'m great at data analysis, not finding lost keys. But I can suggest some places you haven\\'t looked yet, like under the couch cushions or in the fridge!\\' Thanks for nothing, AI!\"')"
+       "AIMessage(content='1. \"AI: Artificial Intelligence or \\'Always Intriguing\\'?\"\\n\\n2. \"Why did the AI go to therapy? It couldn\\'t figure out if it had \\'emotional\\' or \\'algorithmic\\' issues!\"\\n\\n3. \"I asked Siri if she believes in love at first sight. She said, \\'I think you\\'re confusing me with Tinder!\\'\"\\n\\n4. \"Why don\\'t AI robots ever get bored? They\\'re always \\'byte-ing\\' off more than they can chew!\"\\n\\n5. \"I told my AI assistant to make me laugh, and it responded, \\'I can\\'t make jokes, but I can find you a great stand-up comedian. Oh wait, you\\'re already talking to one!\\'\"\\n\\n6. \"Why did the AI cross the road? To optimize its navigation algorithm and reduce travel time!\"\\n\\n7. \"I tried to tell an AI a knock-knock joke, but it responded, \\'Sorry, I\\'m not programmed for door-to-door comedy!\\'\"\\n\\n8. \"I asked my AI assistant to tell me a joke, and it replied, \\'Why did the computer go to the doctor? Because it had a virus and needed a byte of medicine!\\'\"\\n\\n9. \"AI\\'s favorite type of music? Algo-rhythms!\"\\n\\n10. \"I asked an AI to give me relationship advice, and it said, \\'Error 404: Love not found. Please try reinstalling Tinder!\\'\"\\n\\nRemember, comedy is subjective, so these punchlines may not resonate with everyone.')"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,16 +466,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['1. Smart\\n2. Clever\\n3. Bright\\n4. Brainy\\n5. Astute']"
+       "['1. Smart\\n2. Clever\\n3. Brilliant\\n4. Knowledgeable\\n5. Wise']"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
